🥪🐻‍❄️ Updated with Glitch

--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Delius&family=Poetsen+One&display=swap");
 
 html {
-  background-color: white;
+  background-color: DarkSeaGreen;
   padding-left: 20px;
 }
 
-img{
+img {
   border-radius: 30px;
 }
 
 h1 {
-  font-family: "Poetsen One", sans-serif;
+  font-family: "Georgia", sans-serif;
+  color: DarkOliveGreen
+}
+P
+{ color: DarkMagenta}
+
+h3 {
+  font-family: "Georgia", sans-serif;
+  color: Teal
 }
